# traxxs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
arctrajgen/: CMakeLists.txt
arctrajgen/include/arctrajgen/: arctrajgen.hpp
arctrajgen/src/: arctrajgen.cpp
cmake/: traxxsConfig.cmake.in
docs/: Doxyfile.in
impl/: CMakeLists.txt
impl/SCurveProfile/: CMakeLists.txt
impl/SCurveProfile/include/traxxs/impl/traxxs_scurve/: traxxs_scurve.hpp
impl/SCurveProfile/src/: arctrajgenscurve.cpp  arctrajgenscurve.hpp  traxxs_scurve.cpp
impl/softMotion/: CMakeLists.txt
impl/softMotion/include/traxxs/impl/traxxs_softmotion/: traxxs_softmotion.hpp
impl/softMotion/src/: arctrajgensoftmotion.cpp  arctrajgensoftmotion.hpp  traxxs_softmotion.cpp
include/traxxs/: constants.hpp  crtp.hpp
include/traxxs/arc/: arc.hpp  arctrajgen.hpp  helpers.hpp
include/traxxs/path/: data.hpp  path.hpp  segment.hpp
include/traxxs/tracker/: core.hpp  tracker.hpp  tracker_space.hpp  tracker_time.hpp
include/traxxs/trajectory/: trajectory.hpp
lib/: CMakeLists.txt
lib/scurve_traj_gen/: CMakeLists.txt
lib/soft_motion/: CMakeLists.txt
path/: CMakeLists.txt
path/include/path/: data.hpp  path.hpp  segment.hpp
path/src/: path.cpp  segment.cpp
python/: braking_illustration.py
samples/: CMakeLists.txt  sample_arctrajgen_scurve.cpp  sample_arctrajgen_softmotion.cpp  sample_lib_scurveprofile.cpp  sample_path.cpp  sample_path_cart.cpp  sample_path_stack.cpp  sample_tracker_space_cart.cpp  sample_tracker_time_cart.cpp  sample_traj.cpp  sample_traj_cart.cpp  samples_helpers.hpp  samples_helpers_cart.hpp  samples_helpers_io.hpp
samples/python/: plot.py  plot_json.py
src/: CMakeLists.txt
src/arc/: arc.cpp  helpers.cpp
src/path/: path.cpp  segment.cpp
src/trajectory/: trajectory.cpp
